pkg/provider/kubernetes/ingress/fixtures/Ingress-with-conflicting-routers-on-path_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - http:
      paths:
      - path: /foo/bar
        backend:
          service:
            name: service1
            port:
              number: 80
        pathType: Prefix

      - path: /foo-bar
        backend:
          service:
            name: service1
            port:
              number: 80
        pathType: Prefix
